Configure spring rest docs generate swagger